--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ html {
   .missoes{
     padding: 100px 0;
     background: url(../img/alien\ planet-cuate.png) no-repeat center;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-size: cover;
   background-position: center;
   min-height: 500px;
@@ -336,7 +336,7 @@ html {
   }
 
   .faq div h2{
-    color: #fff;
+    color: #d4a9e6;
     font-size: 40px;
     font-weight: bold;
    
